# prolog

./: CMakeLists.txt  README.md  uninstall.sh
include/: pFile.h  pLogger.h  pTimer.h
src/: pFile.cpp  pLogger.cpp  pTimer.cpp
